# AI-Engineering-Copilot-Infrastructure-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai_copilot_infra/: __init__.py  main.py
ai_copilot_infra/api/: __init__.py  app.py
ai_copilot_infra/api/middleware/: __init__.py  logging.py
ai_copilot_infra/api/routes/: __init__.py  copilot.py  health.py
ai_copilot_infra/context/: __init__.py  context7_client.py
ai_copilot_infra/core/: __init__.py  config.py  dependencies.py  llm_service.py  mcp_client.py  redis_service.py  validation.py
ai_copilot_infra/infra/: __init__.py  redis_client.py
ai_copilot_infra/mcp_server/: __init__.py  app.py  base.py  documentation_fetch_tool.py  library_detection_tool.py  registry.py  run.py  tools.py
ai_copilot_infra/observability/: __init__.py  logger.py
ai_copilot_infra/workflows/: __init__.py  base.py  copilot_workflow.py  state.py
copilot-ui/: package-lock.json  package.json
copilot-ui/src/: App.css  App.tsx
infra/: run.py
tests/: test_health.py
