[tool.poetry]
name = "ai-copilot-infra"
version = "0.1.0"
description = "AI Engineering Copilot Infrastructure — production-grade backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ai_copilot_infra" }]

[tool.poetry.dependencies]
python = "^3.11"

# API
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# Redis
redis = { extras = ["hiredis"], version = "^5.0.0" }

# LLM
openai = "^2.24.0"

# Observability
loguru = "^0.7.2"

# HTTP client
httpx = "^0.27.0"

# Environment
python-dotenv = "^1.0.0"

# Async support
anyio = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[tool.poetry.group.langfuse.dependencies]
# Uncomment when ready to integrate Langfuse
# langfuse = "^2.0.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
